--- a/LoginWeb.csproj
+++ b/LoginWeb.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b3ce2f90-cfb5-4fc0-a295-6a443fef2a9e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
