Warning fix + realtime refresh

--- a/appsettings.json
+++ b/appsettings.json
@@ -21,7 +21,15 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "FromEmail": "10421036@student.vgu.edu.vn"
+    "FromEmail": "10421036@student.vgu.edu.vn",
+    "SenderName": "SmarTrack Alert",
+    "AlertRecipientEmail": "10421036@student.vgu.edu.vn"
+  },
+  "MonitoringSettings": {
+    "DefaultCpuWarningThreshold": 80,
+    "DefaultRamWarningThreshold": 85,
+    "DefaultDiskWarningThreshold": 80,
+    "EmailAlertWarningMinutes": 5
   },
   "FrontendUrl": "https://localhost:7253/Account/ConfirmEmail",
   "AllowedHosts": "*"
